modified:   .env modified:   .env.production modified:   .gitignore new file:   .gitignore.new new file:   server/.env.example new file:   server/.env.render modified:   server/config/db.js modified:   server/index.js modified:   src/services/api.js

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,19 @@
-# Produktionskonfiguration fu00fcr die Household App
+# Produktionskonfiguration für die Household App
+
+# Frontend-Konfiguration
 REACT_APP_API_URL=https://household-backend.onrender.com
 REACT_APP_ENV=production
+
+# Diese Datei wird von Render nicht direkt verwendet, sondern dient nur als Vorlage
+# Für Backend-Variablen musst du diese manuell in der Render-Oberfläche eintragen
+
+# Datenbank-Konfiguration
+DB_HOST=jonax.lima-db.de
+DB_USER=USER423445_house
+DB_PASSWORD=Jon@s@321!?*
+DB_NAME=db_423445_24
+
+# Server-Konfiguration
+NODE_ENV=production
+PORT=8080 
+JWT_SECRET=household-app-secure-secret-key
