--- a/server/.env.render
+++ b/server/.env.render
@@ -5,8 +5,10 @@ DB_PASSWORD=Jon@s@321!?*
 DB_NAME=db_423445_24
 
 # Server-Konfiguration
-PORT=5000
+NODE_ENV=production
+PORT=8080
 JWT_SECRET=household-app-secure-secret-key
 
-# Frontend-URL
-FRONTEND_URL=http://localhost:3000
+# CORS-Konfiguration
+# Diese URL muss zur Frontend-URL passen, die Render fu00fcr deine App erstellt
+FRONTEND_URL=https://household-frontend.onrender.com
