modified:   .env.production modified:   server/.env.render modified:   server/index.js

--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 # Produktionskonfiguration für die Household App
 
 # Frontend-Konfiguration
-REACT_APP_API_URL=https://household-backend.onrender.com
+REACT_APP_API_URL=https://household-api.onrender.com
 REACT_APP_ENV=production
 
 # Diese Datei wird von Render nicht direkt verwendet, sondern dient nur als Vorlage
