--- a/server/.env.render
+++ b/server/.env.render
@@ -11,4 +11,4 @@ JWT_SECRET=household-app-secure-secret-key
 
 # CORS-Konfiguration
 # Diese URL muss zur Frontend-URL passen, die Render fu00fcr deine App erstellt
-FRONTEND_URL=https://household-frontend.onrender.com
+FRONTEND_URL=https://household.onrender.com
