readied up for deployment

--- a/.env.production
+++ b/.env.production
@@ -1,11 +1,8 @@
-# Produktionskonfiguration für die Household App
+# Produktionskonfiguration für die Household App auf VPS
 
 # Frontend-Konfiguration
-REACT_APP_API_URL=https://household-api.onrender.com
+REACT_APP_API_URL=https://app.laux.media
 REACT_APP_ENV=production
-
-# Diese Datei wird von Render nicht direkt verwendet, sondern dient nur als Vorlage
-# Für Backend-Variablen musst du diese manuell in der Render-Oberfläche eintragen
 
 # Datenbank-Konfiguration
 DB_HOST=jonax.lima-db.de
@@ -15,5 +12,11 @@ DB_NAME=db_423445_24
 
 # Server-Konfiguration
 NODE_ENV=production
-PORT=8080 
+PORT=5000
 JWT_SECRET=household-app-secure-secret-key
+
+# CORS Konfiguration
+ALLOWED_ORIGINS=https://app.laux.media,http://176.103.220.130:5000
+
+# Socket.io Konfiguration
+SOCKET_CORS_ORIGIN=https://app.laux.media,http://176.103.220.130:5000
