modified:   nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -38,15 +38,24 @@ server {
     proxy_set_header X-Forwarded-Host $host;
     proxy_set_header X-Forwarded-Port $server_port;
 
-    # Reverse Proxy zur Node.js-Anwendung
-    location / {
+    # API Requests zum Node.js-Server weiterleiten
+    location /api/ {
         proxy_pass http://localhost:5000;
         proxy_cache_bypass $http_upgrade;
     }
+    
+    # Socket.io WebSocket Verbindungen
+    location /socket.io/ {
+        proxy_pass http://localhost:5000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
 
-    # Statische Dateien (für bessere Performance)
-    location /static/ {
+    # Statische Frontend-Dateien aus dem dist-Ordner bereitstellen
+    location / {
         root /var/www/household/dist;
+        try_files $uri $uri/ /index.html;  # SPA Routing Support
         expires 30d;
         add_header Cache-Control "public, max-age=2592000";
     }
