--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Datenbank-Konfiguration
-DB_HOST=jonax.lima-db.de
-DB_USER=USER423445_house
-DB_PASSWORD=Jon@s@321!?*
-DB_NAME=db_423445_24
+DB_HOST=db.laux.media
+DB_USER=household
+DB_PASSWORD=p8qmLrHFD9E2I-az
+DB_NAME=household
 
 # Server-Konfiguration
 PORT=5000
