--- a/server/package.json
+++ b/server/package.json
@@ -8,19 +8,20 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
+    "node-cron": "^3.0.3",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
-    "winston": "^3.17.0",
     "web-push": "^3.6.7",
-    "node-cron": "^3.0.3",
-    "crypto-js": "^4.2.0"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
